cabal-version: 3.0

name:           stm-ltd
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple

--source-repository head
--  type: git
--  location: https://github.com/?/stm-ltd.git

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    -- Enable once 9.0.1 is required
    --LexicalNegation
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0"

library
  import: shared-properties
  build-depends:
    array,
    base,
    exceptions,
    stm,
    template-haskell,
    transformers,
  exposed-modules:
    Control.Concurrent.STM.Class
    Control.Concurrent.STM.Class.TH
  other-modules:
  hs-source-dirs:
    src
