cabal-version: 3.0

name:           stm-ltd
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple

synopsis:
  stm drop-in replacement with MonadSTM and optional tagged capabilities

source-repository head
 type: git
 location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonoLocalBinds
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  build-depends:
    array,
    base,
    exceptions,
    stm,
    template-haskell,
    transformers,
  exposed-modules:
    Control.Concurrent.STM.Class
    Control.Monad.Capability
  other-modules:
    Control.Concurrent.STM.Class.TH
  hs-source-dirs:
    src
